--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -11,7 +11,7 @@ jobs:
   one-step-first-job: 
     runs-on: ubuntu-latest
     steps: 
-      - name: Print greeting
+      - name: Print greeting and bye message
         run: |
           echo "Hello World!"
           echo "Done - bye!"
